2010-05-22  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * src/ggd-plugin.c:
    Fix packing of the General frame not to expand unnecessarily, which
    would break other expansions.
  * TODO:
    Add an entry in the TODO-list
  * [All]
    Import into Geany-Plugins.


2010-05-21  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * docs/help/manual.rst:
    Add a new section in the manual that presents and describes the UI
    that the plugin adds to Geany.
  * src/ggd-file-type-loader.c, src/ggd-file-type-manager.c, src/ggd-options.c, 
    src/ggd-plugin.c, src/ggd-utils.c, src/ggd-widget-doctype-selector.c,
    src/ggd.c:
    Strings review
  * src/ggd-plugin.c:
    Open the manual on plugin_help()
  * TODO, src/Makefile.am, src/ggd-plugin.c, src/ggd-plugin.h,
    src/ggd-widget-doctype-selector.c, src/ggd-widget-doctype-selector.h:
    Support per-filetype documentation type setting. This is useful since
    different languages may not share the same doctype (e.g. Java is
    likely to use Javadoc, Vala to use Valadoc, etc.).


2010-05-20  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * TODO, src/ggd-plugin.c:
    Use an helper function to add menu items


2010-05-11  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * src/ggd-options.c:
    Make option saving more robust against corrupted conffile.
    Do not fail saving if the original file cannot be loaded, simply
    overwrite with the new settings. This fixes configuration saving when
    the configuration file does not exist or exists but is corrupted.


2010-05-09  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * configure.ac:
    Show whether to build documentation on configure summary
  * docs/help/manual.rst:
    Clarify the manual by saying for what the syntax is used


2010-05-04  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * src/Makefile.am, src/ggd-plugin.c:
    Add a menu item to open the manual
  * Makefile.am, README.in, configure.ac, docs/Makefile.am,