@@ -1,5 +1,7 @@
 if ENABLE_GEANYGENDOC
 plugin = geanygendoc
+# FIXME: should probably done by an included .mk such as vars.data.mk
+plugindatadir = $(datadir)/geany-plugins/$(plugin)
 endif
 
 FILETYPES = c.conf \
