@@ -7,6 +7,8 @@
     Add an entry in the TODO-list
   * [All]
     Import into Geany-Plugins.
+  * ChangeLog, Makefile.am, data/filetypes/Makefile.am, src/ggd-utils.c:
+    Temporary hackish fix for data installation.
 
 
 2010-05-21  Colomban Wendling  <ban(at)herbesfolles(dot)org>
